✨ feat: add get leaderboard endpoint
