# internal/routes/routes.go
@@ -38,6 +38,7 @@ func SetupRoutes(router *gin.Engine, db *gorm.DB, rdb *redis.Client, sesClient *
 	authenticated.GET("/user", userHandler.GetMeUser)
 
 	v1Router.GET("/user/:userId/ducks", duckHandler.GetDucksList)
+	v1Router.GET("/leaderboard", duckHandler.GetDucksLeaderboard)
 	v1Router.GET("/ducks", duckHandler.GetDucksList)
 	authenticated.POST("/duck", middleware.RateLimit(middleware.CreateRateLimit), duckHandler.CreateDuck)
 	authenticated.PUT("/duck/:duckId/reaction/:reaction", duckHandler.ReactionToDuck)
